--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,17 +6,21 @@
 }
 
 header {
-    height: 100px;
+    height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
-    background-color: aqua;
+    background-image: url(../images/first_background_dark.jpg);
+    background-position: center;
+    background-size: cover;
+    /* background-attachment: fixed; */
 }
 
 header nav {
     max-width: 1300px;
     width: 100%;
-    height: 100%;
+    height: 10vh;
+    position: fixed;
 }
 
 header nav ul {
@@ -35,4 +39,8 @@ header nav ul li {
 }
 header nav ul li a{
     text-decoration: none;
+}
+
+main {
+    height: 1000px;
 }
