--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,46 +1,132 @@
+:root {
+    --white-color: #fff;
+    --white-color-shadow-01: rgba(255,255,255,0.1);
+    --red-color-lighter: #FE344E;
+    --red-color: #B91F33;
+    --red-color-shadow-01: rgba(185, 31, 51, 0.1);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat';
+    font-family: 'Anton', sans-serif;
+    background-color: black;
+}
+
+.box_glass_effect {
+    background: rgba(36, 36, 36, 0.4); /* průhledné pozadí */
+    backdrop-filter: blur(20px); /* rozmazání pozadí */
+    -webkit-backdrop-filter: blur(20px); /* Safari */
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 30px;
+    box-shadow: 0 4px 20px var(--white-color-shadow-01);
 }
 
 header {
-    height: 100vh;
+    height: 80px;
     width: 100vw;
     display: flex;
     justify-content: center;
-    background-image: url(../images/first_background_dark.jpg);
-    background-position: center;
-    background-size: cover;
-    /* background-attachment: fixed; */
+    position: fixed;
+    top: 1rem;
 }
 
-header nav {
+header .navbar_container {
     max-width: 1300px;
     width: 100%;
-    height: 10vh;
-    position: fixed;
-}
-
-header nav ul {
     height: 100%;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
-}
+    align-items: center;
+    margin: 0 1rem;
+}   
 
-header nav ul li {
-    list-style-type: none;
+header .navbar_container .header_logo {
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 1rem;
+    padding-right: 1rem;
+    background: transparent;
 }
-header nav ul li a{
-    text-decoration: none;
+header .navbar_container .header_logo a {
+    height: 150%;
+    background: transparent;
+}
+header .navbar_container .header_logo a img {
+    height: 100%;
+    background: transparent;
+}
+header .navbar_container .ham_menu {
+    display: none;
+    /* display: flex; */
+    flex-direction: column;
+    gap: 5px;
+    padding-left: 1rem;
+    background: transparent;
+    cursor: pointer;
+}
+header .navbar_container .ham_menu span {
+    display: block;
+    height: 3px;
+    width: 25px;
+    background-color: var(--white-color);
+    transition: all 0.5s;
+}
+.display_none_flex {
+    display: flex !important;
+}
+header .navbar_container .ham_menu.active > span:first-child{
+    transform: rotate(45deg) translate(6px, 4px);
+    transition: all 0.5s;
+}
+header .navbar_container .ham_menu.active > span:nth-child(2) {
+    opacity: 0;
+}
+header .navbar_container .ham_menu.active > span:last-child {
+    transform: rotate(-45deg) translate(7px, -5px);
+    transition: all 0.5s;
+}
+header .navbar_container nav {
+    height: 100%;
+    padding-left: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+}
+header .navbar_container nav ul {
+    display: flex;
+    gap: 1rem;
+    background: transparent;
+    font-size: 20px;
+    text-transform: uppercase;
 }
 
-main {
-    height: 1000px;
+header .navbar_container nav ul li{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+    background: transparent;
+    
 }
+header .navbar_container nav ul li a {
+    text-decoration: none;
+    background: transparent;
+    color: var(--white-color);
+}
+header .navbar_container nav ul li:last-child {
+    padding-right: 0 !important;
+}
+header .navbar_container nav ul li:last-child a {
+    border: 1px solid var(--red-color);
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+    box-shadow: inset -20px -20px 20px var(--red-color-shadow-01),
+                inset 20px 20px 20px var(--red-color-shadow-01);
+}
+
