--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
     --white-color-shadow-01: rgba(255,255,255,0.1);
     --red-color-lighter: #FE344E;
     --red-color: #B91F33;
-    --red-color-shadow-01: rgba(185, 31, 51, 0.1);
+    --red-color-shadow-01: rgba(185, 31, 51, 0.2);
     --main-background: #242424;
 }
 
@@ -11,12 +11,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Anton', sans-serif;
 }
 
 body {
     background: url(../images/background-grain.png),
                 var(--main-background);
+    font-family: 'Anton', sans-serif;
 }
 
 .box_glass_effect {
@@ -31,9 +31,7 @@ body {
 .text_color_gradient {
     background: linear-gradient(
         to right,
-        var(--red-color-lighter) 0%,
-        var(--red-color-lighter) 70%,
-        var(--red-color) 70%,
+        var(--red-color-lighter) 60%,
         var(--red-color) 100%
     );
     -webkit-background-clip: text;
@@ -43,9 +41,7 @@ body {
 .underline_color_gradient {
     background: linear-gradient(
         to right,
-        var(--red-color-lighter) 0%,
-        var(--red-color-lighter) 70%,
-        var(--red-color) 70%,
+        var(--red-color-lighter) 60%,
         var(--red-color) 100%
     );
     background-position: 0 100%;
@@ -132,10 +128,51 @@ header {
     text-decoration: none;
     color: var(--white-color);
 }
-header .navbar_container nav ul li:last-child a {
+.navbar_container nav ul li a:hover {
+    color: var(--red-color-lighter);
+    transition: all 0.3s;
+}
+.navbar_container nav ul li:last-child a {
     border: 1px solid var(--red-color);
     border-radius: 10px;
     padding: 0.5rem 1rem;
     box-shadow: inset -20px -20px 20px var(--red-color-shadow-01),
                 inset 20px 20px 20px var(--red-color-shadow-01);
+}
+.navbar_container nav ul li:last-child a:hover {
+    background-color: var(--red-color);
+    color: var(--white-color);
+}
+
+/* ****
+    FOOTER
+**** */
+footer {
+    /* height: 80px; */
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 1rem;
+}
+
+.footer_container {
+    max-width: 1300px;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0 1rem;
+}
+
+.footer_container .text_information {
+    width: 50%;
+}
+.footer_container .map_information {
+    width: 50%;
+}
+.footer_container .copyright_information {
+    width: 100%;
 }
