--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,11 +16,10 @@
 body {
     background: url(../images/background-grain.png),
                 var(--main-background);
-    font-family: 'Anton', sans-serif;
 }
 
 .box_glass_effect {
-    background: rgba(36, 36, 36, 0.8) !important;
+    background: rgba(36, 36, 36, 0.4) !important;
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -59,6 +58,7 @@ header {
     justify-content: center;
     position: fixed;
     top: 1rem;
+    font-family: 'Anton', sans-serif;
 }
 
 .navbar_container {
@@ -148,12 +148,12 @@ header {
     FOOTER
 **** */
 footer {
-    /* height: 80px; */
     width: 100vw;
     display: flex;
     justify-content: center;
-    position: fixed;
-    top: 1rem;
+    position: relative;
+    top: 15rem;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .footer_container {
@@ -163,16 +163,61 @@ footer {
     padding: 1rem;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    /* align-items: center; */
     margin: 0 1rem;
 }
 
 .footer_container .text_information {
     width: 50%;
 }
+.footer_container .text_information nav ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 20px;
+    color: var(--white-color);
+}
+.footer_container .text_information nav ul li {
+    display: flex;
+    justify-content: start;
+    gap: 1rem;
+}
+.footer_container .text_information nav ul li a {
+    text-decoration: none;
+    color: var(--white-color);
+}
+.footer_container .text_information nav ul li a:hover {
+    color: var(--red-color-lighter);
+    transition: all 0.3s;
+}
+.footer_container .text_information  nav ul li .contact {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.5rem;   
+}
+.footer_container .text_information nav ul li .fa-brands {
+    font-size: 2.5rem;
+}
+.footer_container .text_information nav ul li .fa-solid {
+    font-size: 1.5rem;
+}
+
+
 .footer_container .map_information {
     width: 50%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+.footer_container .map_information iframe {
+    border-radius: 10px;
 }
 .footer_container .copyright_information {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
 }
