--- a/query.css
+++ b/query.css
@@ -1,3 +1,23 @@
+@media (max-width: 1050px){
+    .text_map_section {
+        flex-wrap: wrap;
+    }
+
+    .text_map_section .left_section {
+        width: 50%;
+        align-items: start;
+    }
+
+    .text_map_section .middle_section {
+        width: 50%;
+    }
+
+    .text_map_section .right_section {
+        width: 100%;
+        margin-top: 1rem;
+    }
+}
+
 @media (max-width: 930px) {
     /* ****
         HEADER
@@ -25,6 +45,7 @@
         top: 96px;
         left: 0;
         display: none;
+        z-index: 999;
     }
     .navbar_container nav.active {
         display: flex;
@@ -34,5 +55,18 @@
     }
     .navbar_container nav ul li:last-child {
         padding: 0 1rem !important;
+    }
+}
+
+@media (max-width: 750px){
+    .text_map_section {
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
+
+    .text_map_section .section {
+        width: 100%;
+        text-align: center;
+        align-items: center;
     }
 }
