--- a/query.css
+++ b/query.css
@@ -46,6 +46,7 @@
         left: 0;
         display: none;
         z-index: 999;
+        background: rgb(36, 36, 36);
     }
     .navbar_container nav.active {
         display: flex;
