--- a/query.css
+++ b/query.css
@@ -27,14 +27,12 @@
     }
     .navbar_container .ham_menu.active > span:first-child{
         transform: rotate(45deg) translate(6px, 4px);
-        transition: all 0.5s;
     }
     .navbar_container .ham_menu.active > span:nth-child(2) {
         opacity: 0;
     }
     .navbar_container .ham_menu.active > span:last-child {
         transform: rotate(-45deg) translate(7px, -5px);
-        transition: all 0.5s;
     }
 
     .navbar_container nav {
@@ -42,14 +40,14 @@
         width: 100%;
         padding: 1rem 0;
         position: absolute;
-        top: 96px;
+        top: -300px;
         left: 0;
-        display: none;
         z-index: 999;
         background: rgb(36, 36, 36);
+        transition: all 0.3s ease;
     }
     .navbar_container nav.active {
-        display: flex;
+        top: 96px;
     }
     .navbar_container nav ul {
         flex-direction: column;
