--- a/css/index.css
+++ b/css/index.css
@@ -14,33 +14,29 @@ main {
 .main_container .introduction {
     height: auto;
     margin-top: 80px;
-}
-.main_container .one_section {
     display: flex;
     justify-content: space-between;
     width: 100%;
     align-items: flex-end;
 }
-.main_container .one_section .text_section {
+
+.main_container .introduction .text_section {
     padding: 2rem 3rem;
     display: inline-block;
     width: 66%;
     z-index: 10;
-}
-.main_container .one_section .text_section h1 {
-    font-family: 'Anton', sans-serif;
-    text-transform: uppercase;
-    display: inline-block;
-    font-size: 60px;
-}
-.main_container .introduction .text_section{
     text-align: center;
     height: auto;
 }
 .main_container .introduction .text_section h1 {
+    font-family: 'Anton', sans-serif;
+    text-transform: uppercase;
+    display: inline-block;
+    font-size: 60px;
     color: var(--white-color);
 }
-.main_container .one_section .photo_group {
+
+.main_container .introduction .photo_group {
     height: auto;
     display: flex;
     justify-content: center;
