--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,6 @@ main {
     align-items: center;
     flex-direction: column;
 }
-
 .main_container {
     max-width: 1300px;
     width: calc(100% - 2rem);
@@ -12,14 +11,19 @@ main {
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 4rem;
 }
-.main_container .introduction {
-    margin-top: 80px;
-}
-.main_container .introduction .one_section .photo_group {
+.main_container .one_container {
+    text-align: center;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+    width: 100%;
+}
+.main_container .one_container h1 {
+    font-size: 50px;
 }
 .main_container .one_container .one_section{
     width: 100%;
@@ -35,46 +39,14 @@ main {
 }
 .main_container .one_container .one_section .text_section h1 {
     font-size: 60px;
-    color: var(--white-color);
 }
-
+.main_container .one_container .one_section .text_section h2 {
+    font-size: 40px;
+}
 .main_container .one_container .one_section .photo_group {
     width: 34%;
 }
 
-.main_container .one_container {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 5rem;
-}
-.main_container .one_container h1 {
-    font-size: 50px;
-    margin: 0 auto;
-}
-
-.main_container .one_container .rental_ice_rink .text_section {
-    order: 1;
-}
-.main_container .one_container .rental_ice_rink .photo_group {
-    order: 2;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.main_container .one_container .public_skating .text_section,
-.main_container .one_container .school_actions .text_section {
-    order: 2;
-}
-.main_container .one_container .public_skating .photo_group,
-.main_container .one_container .school_actions .photo_group {
-    order: 1;
-}
-
-.main_container .one_container .one_section .text_section h2 {
-    font-size: 40px;
-}
-.main_container .one_container .one_section .text_section p {
-    font-family: 'Montserrat', sans-serif;
-    color: var(--white-color);
+.main_container .introduction {
+    margin-top: 80px;
 }
