--- a/query/index-query.css
+++ b/query/index-query.css
@@ -1,56 +1,52 @@
-@media (max-width: 1300px) {
-    .main_container .one_section .text_section h1 {
-        font-size: 55px;
-    }
-}
-
-@media (max-width: 1230px) {
-    .main_container .one_section .text_section {
-        width: 76%;
-    }
-
-    .main_container .one_section .photo_group {
-        width: 24%;
-    }
-}
-
-@media (max-width: 1080px) {
-    .main_container .one_section .text_section h1 {
+@media (max-width: 1030px){
+    .main_container .one_container .one_section .text_section h1 {
         font-size: 50px;
     }
-    .main_container .one_section .text_section {
-        width: 81%;
-    }
-
-    .main_container .one_section .photo_group {
-        width: 19%;
+    .text {
+        font-size: 16px;
     }
 }
-@media (max-width: 1080px) {
-    .main_container .one_section {
+
+@media (max-width: 900px){
+    .main_container .one_container .one_section .text_section h1 {
+        font-size: 40px;
+    }
+    .right_photo_clip, .left_photo_clip {
+        width: 700px;
+    }
+}
+
+@media (max-width: 800px){
+    .main_container .one_container .one_section {
         flex-direction: column;
         align-items: center;
     }
-    .main_container .one_section .text_section {
-        width: auto;
-        order: 2;
-    }
-
-    .main_container .one_section .photo_group {
+    .main_container .one_container .one_section .photo_group {
         width: 100%;
-        margin-bottom: -140px;
-        margin-right: 0;
+        display: flex;
+        justify-content: center;
         order: 1;
+        height: 600px;
+        overflow: hidden;
     }
-}
-@media (max-width: 768px) {
-    .main_container .one_section .text_section h1 {
-        font-size: 40px;
+    .main_container .one_container .one_section .text_section {
+        order: 2;
+        width: 90%;
+        padding: 2rem;
+        margin-top: -50px;
+    }
+    .right_photo_clip, .left_photo_clip {
+        height: 100%;
+        width: 80%;
     }
 }
 
-@media (max-width: 576px) {
-    .main_container .one_section .text_section h1 {
-        font-size: 36px;
+@media (max-width: 576px){
+    .main_container .one_container h1,
+    .main_container .one_container .one_section .text_section h1 {
+        font-size: 41px;
+    }
+    .right_photo_clip, .left_photo_clip {
+        width: 70%;
     }
 }
