--- a/css/footer.css
+++ b/css/footer.css
@@ -33,13 +33,17 @@ footer {
 .footer_container .text_map_section .left_section ul li a {
     text-decoration: none;
     color: var(--white-color);
+    transition: all 0.3s;
 }
 .footer_container .text_map_section .left_section ul li a:hover {
     color: var(--red-color-lighter);
-    transition: all 0.3s;
 }
 .footer_container .text_map_section .left_section ul li a img {
     width: 250px;
+    transition: transform 0.3s ease;
+}
+.footer_container .text_map_section .left_section ul li a img:hover {
+    transform: scale(1.025);
 }
 
 .footer_container .section {
@@ -61,32 +65,40 @@ footer {
     font-size: 20px;
     text-decoration: none;
 }
+.footer_container .text_map_section .section .contact i:hover + a,
 .footer_container .text_map_section .section .contact a:hover {
     text-decoration: underline;
 }
+
 .footer_container .text_map_section .section .social_media_contact {
     display: flex;
     gap: 1rem;
 }
 .footer_container .text_map_section .section .fa-solid {
     font-size: 2rem;
+    cursor: pointer;
 }
 .footer_container .text_map_section .section .fa-brands {
     font-size: 2.5rem;
     color: var(--white-color);
+    transition: transform 0.3s ease;
 }
-.footer_container .text_map_section .section .social_media_contact .fa-brands.fa-instagram {
-    background: linear-gradient(45deg, #833AB4, #FD1D1D, #FCAF45, #FFDC80);
-    background-size: 200% 200%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: white;
-    background-clip: text;
-    transition: background-position 1s ease, -webkit-text-fill-color 0.5s ease;
-    background-position: left bottom;
+.footer_container .text_map_section .section .fa-brands:hover {
+    transform: scale(1.25);
 }
+
 .footer_container .text_map_section .section .social_media_contact .fa-brands.fa-instagram:hover {
+    background: linear-gradient(
+        45deg,
+        #feda75,
+        #fa7e1e,
+        #d62976,
+        #962fbf,
+        #4f5bd5
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    background-position: right top;
 }
 .footer_container .text_map_section .section .social_media_contact .fa-brands.fa-facebook:hover {
     color: #1877F2;
