--- a/css/general.css
+++ b/css/general.css
@@ -99,6 +99,7 @@ body {
     color: var(--white-color);
     font-size: 20px;
     line-height: 1.5;
+    display: inline-block;
 }
 
 .one_section_left_side {
@@ -135,3 +136,64 @@ body {
     font-size: 1.5rem;
     color: var(--white-color);
 }
+
+
+main {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.main_container {
+    max-width: 1300px;
+    width: calc(100% - 2rem);
+    margin: 0 1rem;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6rem;
+}
+.main_container .one_container {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+    width: 100%;
+}
+.main_container .one_container h1 {
+    font-size: 50px;
+}
+
+.main_container .one_container .one_section{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.main_container .one_container .one_section .text_section {
+    padding: 2rem 3rem;
+    width: 66%;
+    z-index: 10;
+    text-align: center;
+}
+
+.main_container .one_container .one_section .text_section h1 {
+    font-size: 60px;
+}
+
+.main_container .one_container .text_section h2 {
+    font-size: 40px;
+}
+
+.main_container .one_container .one_section .photo_group {
+    width: 34%;
+}
+
+.main_container .introduction {
+    margin-top: 80px;
+}
+
