--- a/css/general.css
+++ b/css/general.css
@@ -122,6 +122,7 @@ body {
     transition: opacity 0.3s ease;
     opacity: 0;
     pointer-events: none;
+    
 }
 #arrow_top_scroll.active {
     opacity: 1;
@@ -135,6 +136,7 @@ body {
     padding: 1rem;
     font-size: 1.5rem;
     color: var(--white-color);
+    width: 56px;
 }
 
 
