--- a/css/operating_hours.css
+++ b/css/operating_hours.css
@@ -1,26 +1,15 @@
 .operating_hours.one_container .one_section{
     gap: 2rem !important;
+    align-items: start;
+}
+.operating_hours_next_services.one_container .one_section {
+    flex-wrap: wrap;
 }
 
 .weekends.one_section .text_section, .working_days.one_section .text_section {
     width: 100% !important;
 }
 
-.operating_hours_next_services.one_container .one_section {
-    flex-wrap: wrap;
-}
-
-.operating_hours_sharp_skating {
-    width: 50% !important;
-}
-
-.operating_hours_food_service {
-    width: 50% !important;
-}
-
-.operating_hours_skate_rental {
-    width: 100% !important;
-}
 
 .operating_hours_sharp_skating .text_section, .operating_hours_food_service .text_section, .operating_hours_skate_rental .text_section {
     width: 100% !important;
@@ -34,4 +23,14 @@
 
 .operating_hours .wrapper .blok p:nth-of-type(2) {
   font-weight: bold;
+}
+
+
+.operating_hours_sharp_skating,
+.operating_hours_food_service {
+    flex: 0 0 calc(50% - 1rem);
+}
+
+.operating_hours_skate_rental {
+    flex: 0 0 100%;
 }
