--- a/css/general.css
+++ b/css/general.css
@@ -151,7 +151,7 @@ main {
     max-width: 1300px;
     width: calc(100% - 2rem);
     margin: 0 1rem;
-    overflow: hidden;
+    overflow: visible;
     display: flex;
     flex-direction: column;
     align-items: center;
